# app_downtime_watcher

./: Cargo.toml
src/: error.rs  main.rs
src/api/: mod.rs  user_api.rs  watcher_api.rs
src/api/guards/: mod.rs
src/db/: endpoints.rs  mod.rs  users.rs
