[package]
name = "app_downtime_watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clickhouse = "0.11.6"
educe = { version = "0.4.23", default-features = false, features = ["default", "Default"] }
futures = { version = "0.3.28", default-features = false }
md5 = { version = "0.7.0", default-features = false }
poem = { version = "1.3.58", features = ["session"] }
poem-openapi = { version = "3.0.5", features = ["swagger-ui"] }
reqwest = "0.11.22"
rust_helpers = "1.2.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
